@@ -1,4 +1,4 @@
-# $Id: optimize_gcc.mk,v 1.19 2005/02/18 17:20:38 abs Exp $
+# $Id: optimize_gcc.mk,v 1.20 2005/04/08 07:24:25 abs Exp $
 
 # This file is 'experimental' - which is doublespeak for unspeakably
 # ugly, and probably quite broken by design.
@@ -29,11 +29,11 @@ PKGBASE=${.CURDIR:C:.*/::}
 
 COPT_FLAGS+=-ffast-math -fomit-frame-pointer
 
-PKG_EXCLUDE_OMIT_FRAME_POINTER+=firefox firefox-gtk2 galeon galeon-devel
+PKG_EXCLUDE_OMIT_FRAME_POINTER+=firefox firefox-gtk1 galeon galeon-devel
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=lua lua4 mozilla mozilla-gtk2
-PKG_EXCLUDE_OMIT_FRAME_POINTER+=thunderbird thunderbird-gtk2
+PKG_EXCLUDE_OMIT_FRAME_POINTER+=thunderbird thunderbird-gtk1
 PKG_EXCLUDE_INLINE_FUNCTIONS+=qemu userppp
-PKG_EXCLUDE_FAST_MATH+=firefox firefox-gtk2 # v1.0, NetBSD i386/2.0
+PKG_EXCLUDE_FAST_MATH+=firefox firefox-gtk1 # v1.0, NetBSD i386/2.0
 .if !defined(USE_GCC3)
 PKG_EXCLUDE_OMIT_FRAME_POINTER+=qt3-libs kdeedu3 koffice
 .endif
